Implement and Test HighLife Rules

--- a/game_of_life/Game_of_Life_Simulation.ipynb
+++ b/game_of_life/Game_of_Life_Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "MAX_ITER = 2000\n",
     "MAX_SIZE = 200"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Game of Life"
    ]
   },
   {
@@ -91,6 +98,58 @@
    "metadata": {},
    "source": [
     "![SegmentLocal](beehives.gif \"segment\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## High Life"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_highlife(board, max_size=MAX_SIZE, max_iter=2000, filename=\"blaster_automaton.gif\"):\n",
+    "    rules = game.HighlifeRules() # rules object\n",
+    "    game_ = game.Game(game.State(board), rules, max_size) # game object\n",
+    "    rw = game_.run_game(max_iter) # running the game\n",
+    "    \n",
+    "    # transform and visualize the results\n",
+    "    res = game.results_to_array(rw, max_size)\n",
+    "    game.save_gif(res, filename)\n",
+    "    return filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'highlife_replicator.gif'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board = {(20, 20), (20, 21), (20, 22), (21, 23), (22, 23), (23, 23)}\n",
+    "visualize_highlife(board, max_size=50, max_iter=2000, filename=\"highlife_replicator.gif\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](highlife_replicator.gif \"segment\")"
    ]
   }
  ],
